--- a/src/apps_common/footer/static/footer/scss/footer.scss
+++ b/src/apps_common/footer/static/footer/scss/footer.scss
@@ -39,7 +39,7 @@ footer {
         content: '';
         display: block;
         padding-bottom: #{100 * $dl_logo_height/$dl_logo_width + "%"};
-        background: url(../../img/sprite_a.svg) no-repeat rel-background-position(
+        background: $sprite_url no-repeat rel-background-position(
             $dl_logo_width, $dl_logo_height, $sprite_width, $sprite_height, -86px, -56px
         );
         background-size: rel-background-size($dl_logo_width, $dl_logo_height, $sprite_width, $sprite_height);
