--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -34,6 +34,7 @@ $grid_space: 14px;
 //=======================
 // Sprite
 //=======================
+$sprite_url: url(/static/img/sprite_a.svg);
 $sprite_width: 300px;
 $sprite_height: 106px;
 
