--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -63,6 +63,8 @@
     <div class="sticky"></div>
   </div>
 
+  <div id="gmap" style="height: 500px"></div>
+
   {% render_attached_blocks config %}
 
 {% endblock content %}
