--- a/src/libs/sprite_image/static/sprite_image/admin/css/sprite_image.css
+++ b/src/libs/sprite_image/static/sprite_image/admin/css/sprite_image.css
@@ -73,7 +73,7 @@
 }
 
 .sprite-icon-item.active {
-    box-shadow: 0 0 8px 1px #080;
+    box-shadow: 0 0 3px 2px #0A0;
 }
 
 .sprite-icon-item:hover {
