--- a/src/static/scss/popups/preloader.scss
+++ b/src/static/scss/popups/preloader.scss
@@ -12,8 +12,13 @@ $image_color: #82BD36;
 
 
 #popup-container.popup-preloader {
+  .popup-window {
+    width: auto;
+  }
+
   .popup-content {
     padding: 0;
+    min-height: 0;
     width: nth($width, 1);
     height: nth($height, 1);
     text-align: center;
