--- a/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
+++ b/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
@@ -22,6 +22,8 @@
 
 /* Некорректная картинка */
 .stdimage .item-preview.invalid {
+    min-width: 120px;
+    min-height: 120px;
     box-shadow: 1px 1px 4px red;
 }
 
