--- a/src/apps_common/gallery/static/gallery/admin/css/gallery.css
+++ b/src/apps_common/gallery/static/gallery/admin/css/gallery.css
@@ -1,17 +1,65 @@
-.gallery h4 {
-    margin: 0;
+/* Заголовок */
+.gallery .caption {
+    font-size: 14px;
+    font-weight: bold;
 }
-.gallery button {
+
+/* Блок с кнопками */
+.gallery .buttons button {
     margin-top: 5px;
     margin-right: 10px;
 }
-.gallery button:last-child {
+.gallery .buttons button:last-child {
     margin-right: 0;
 }
 
+.gallery-wrapper {
+    position: relative;
+    z-index: 1;
+}
 
-.gallery-items {
+/* Перетаскивание файлов */
+.dragover-content {
+    display: none;
+    position: absolute;
+    padding: 20px;
+    left: 0;
+    top: 0;
     width: 100%;
+    height: 100%;
+    z-index: 2;
+    color: #FFFFFF;
+    font-size: 20px;
+    text-align: center;
+    background-color: rgba(160, 160, 160, 0.85);
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.gallery .dragover-content span {
+    vertical-align: middle;
+}
+.gallery .dragover-content:after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    min-height: inherit;
+    vertical-align: middle;
+}
+
+.gallery-wrapper.dragover .gallery-items {
+    min-height: 130px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.gallery-wrapper.dragover .dragover-content {
+    display: block;
+}
+
+
+/* Контейнер элементов галереи */
+.gallery-items {
     font-size: 0;
     line-height: 0;
     margin-top: 4px;
@@ -20,23 +68,6 @@
     content: "";
     display: table;
     clear: both;
-}
-.dragover .gallery-items {
-    min-height: 130px;
-    position: relative;
-}
-.dragover .gallery-items:before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    outline-offset: -2px;
-    outline: 4px dashed #606060;
-    background: rgba(160,160,160,0.4);
 }
 
 /* Элемент галереи */
@@ -108,7 +139,8 @@
     margin: -14px 0 0 -20px;
     border-radius: 7px;
     background: url(../img/video.png?x=1) no-repeat center center #000;
-    transition: opacity, 0.2s;
+    -webkit-transition: opacity 0.2s;
+    transition: opacity 0.2s;
 }
 .gallery-item-video-link:hover .item-preview:after {
     opacity: 0;
@@ -156,9 +188,11 @@
     background: rgba(255, 255, 255, 0.7);
 }
 .gallery-item:hover .item-controls {
+    -webkit-transform: translateY(0px);
     transform: translateY(0px);
 }
 .gallery-item:not(:hover) .item-controls {
+    -webkit-transform: translateY(100%);
     transform: translateY(100%);
 }
 .gallery-item .item-controls .check-box {
@@ -195,7 +229,7 @@
 }
 
 
-/* Ошибка */
+/* Ошибочный элемент */
 .gallery-item-error {
     box-shadow: 1px 1px 4px #F00;
 }
