--- a/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
+++ b/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
@@ -36,10 +36,10 @@
     width: 100%;
     height: 100%;
     z-index: 2;
-    color: #606060;
+    color: #FFFFFF;
     font-size: 20px;
     text-align: center;
-    background-color: #D0D0D0;
+    background-color: rgba(160, 160, 160, 0.85);
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -56,7 +56,7 @@
 }
 
 .stdimage.dragover {
-    min-height: 120px;
+    min-height: 130px;
 }
 .stdimage.dragover .dragover-content {
     display: block;
