--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -32,6 +32,12 @@ $grid_space: 14px;
 
 
 //=======================
+// Контентые блоки
+//=======================
+$block_paddings: 84px, 84px, 54px, 42px;
+
+
+//=======================
 // Sprite
 //=======================
 $sprite_url: url(/static/img/sprite_a.svg);
