--- a/src/static/scss/error_page.scss
+++ b/src/static/scss/error_page.scss
@@ -6,3 +6,28 @@
     vertical-align: middle;
   }
 }
+
+.inner {
+  display: inline-block;
+  @include block-paddings(padding-top, padding-bottom);
+
+  .code {
+    color: #000000;
+    line-height: 1;
+    @include font-size(100px);
+    @include media_interval(0, $media540) {
+      @include font-size(80px);
+    }
+  }
+
+  .description {
+    max-width: 360px;
+    margin: 20px auto 0;
+    @include media_interval($media400, $media540) {
+      max-width: 300px;
+    }
+    @include media_interval(0, $media400) {
+      max-width: 260px;
+    }
+  }
+}
