--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -14,7 +14,16 @@
 {% block content %}
 
   <div class="grid-block text-styles">
-    <h1>{% trans 'Page not found' %}</h1>
+    <div class="inner">
+      <div class="code title-h1">404</div>
+      <div class="description">
+        {% blocktrans %}
+          The page you are looking for no longer exists.<br>
+          Perhaps you can return back to the site’s <a href="/">homepage</a> and see if you can find what you are
+          looking for.
+        {% endblocktrans %}
+      </div>
+    </div>
   </div>
 
 {% endblock %}
