--- a/src/apps/blog/static/blog/scss/detail.scss
+++ b/src/apps/blog/static/blog/scss/detail.scss
@@ -1,3 +1,17 @@
 @import "mixins";
 
+#blog-post {
+  .date {
+    color: #A0A0A0;
+    @include fontsize_default;
+  }
 
+  .title {
+    margin: 20px 0;
+    text-transform: uppercase;
+  }
+
+  .preview {
+    margin-bottom: 20px;
+  }
+}
