--- a/src/apps/social/templates/social/follow_us.html
+++ b/src/apps/social/templates/social/follow_us.html
@@ -1,4 +1,4 @@
-<div id="follow-us">
+<div id="follow-us" class="block">
   <div class="grid-block">
     <div class="title-h1">{{ config.header }}</div>
 
