--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -122,20 +122,23 @@ body {
   }
 }
 
+// Контентный блок
+.block {
+  @include block-paddings(margin-top, margin-bottom);
+}
+
 // Заголовки
 .title-h1 {
-  line-height: 1;
   font-weight: bold;
-  @include font-size(40px);
+  @include font-size(40px, 46px);
   @include media_interval(0, $media768) {
     @include font-size(28px);
   }
 }
 
 .title-h2 {
-  line-height: 1;
   font-weight: bold;
-  @include font-size(28px);
+  @include font-size(28px, 32px);
   @include media_interval(0, $media768) {
     @include font-size(20px);
   }
