--- a/src/apps/blog/templates/blog/detail.html
+++ b/src/apps/blog/templates/blog/detail.html
@@ -1,39 +1,37 @@
 {% extends 'layout.html' %}
 
-{% load staticfiles %}
 {% load pipeline %}
 {% load away %}
 {% load text %}
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'blog_post_page' %}
+  {% stylesheet 'blog_detail_page' %}
 {% endblock static_head %}
 
 {% block static_js %}
   {{ block.super }}
-  {% javascript 'blog_post_page' %}
+  {% javascript 'blog_detail_page' %}
 {% endblock static_js %}
 
 
 {% block content %}
 
-  <div class="grid">
-    <div class="grid-col-wide-6 grid-col-6 grid-col-alone">
-
+  <div id="blog-post" class="block">
+    <div class="grid-block">
       <div class="date">{{ post.date|date:"jS E Y" }}</div>
 
       <h1 class="title title-h1">{{ post.title }}</h1>
 
       {% if post.preview %}
-        <img class="preview" srcset="{{ post.preview.normal.srcset }}, {{ post.preview.mobile.srcset }}"
-             src="{{ post.preview.normal.url }}" sizes="(min-width: 1024px) 75vw, 100vw">
+        <img class="preview" src="{{ post.preview.normal.url }}"
+             srcset="{{ post.preview.normal.srcset }}, {{ post.preview.mobile.srcset }}"
+             sizes="100vw">
       {% endif %}
 
       <div class="text text-styles">
         {% away post.text|typograf %}
       </div>
-
     </div>
   </div>
 
