--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -9,11 +9,11 @@
     <div class="menu-box">
       <span id="mobile-menu-button"></span>
 
-      <div id="main-menu" class="main-menu">
+      <div id="main-menu">
         {% main_menu %}
       </div>
 
-      <div id="mobile-menu" class="main-menu">
+      <div id="mobile-menu">
         {% main_menu %}
       </div>
     </div>
