--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -60,5 +60,6 @@ $menu_burger_width: 28px;
 $menu_burger_line_height: 4px;
 $menu_burger_line_space: 5px;
 
-// точка перехода к модильному меню
+// точка перехода к мобильному меню
 $mobile_menu_point: $media768;
+
