--- a/src/libs/async_blocks/templates/async_blocks/async_block.html
+++ b/src/libs/async_blocks/templates/async_blocks/async_block.html
@@ -1,6 +1,5 @@
-<div id="{{ id }}" class="async-block"
-     data-url="{{ url }}"
-    {% for key, value in kwargs.items %}
+<div id="{{ id }}" class="async-block" data-url="{{ url }}"
+  {% for key, value in kwargs.items %}
      data-{{ key }}="{{ value }}"
-    {% endfor %}>
+  {% endfor %}>
 </div>
