social buttons + fix menu + fix JS classes

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -80,6 +80,21 @@
     </div>
   </div>
 
+  <div class="grid-block">
+    <div class="social-buttons"
+         data-url="http://globalconservation.org/"
+         data-title="Saving the new wild"
+         data-image="http://globalconservation.org/media/main/background_1_UQPaWFZ.wide.jpeg"
+         data-description="To enable 'No Kill, No Cut' protection for endangered national parks and world heritage sites with Global Park Defense">
+      <div class="social-button social-vk">Share</div>
+      <div class="social-button social-fb">Share</div>
+      <div class="social-button social-gp">Share</div>
+      <div class="social-button social-tw">Share</div>
+      <div class="social-button social-li">Share</div>
+      <div class="social-button social-pn">Share</div>
+    </div>
+  </div>
+
   {% render_attached_blocks config %}
 
 {% endblock content %}
