--- a/src/apps_common/social_buttons/static/social_buttons/scss/social_buttons.scss
+++ b/src/apps_common/social_buttons/static/social_buttons/scss/social_buttons.scss
@@ -2,43 +2,33 @@
 
 .social-button {
   display: inline-block;
-  @include no_fontsize;
+  cursor: pointer;
+  @include fontsize_default;
+
   &:before {
     content: '';
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    background: url(../img/medium.png) no-repeat;
+    width: 20px;
+    height: 20px;
+    vertical-align: bottom;
+    background: url(../img/small.png) no-repeat;
   }
-  &.social-button-fb:before {
+  &.social-fb:before {
     background-position: 0 0;
   }
-  &.social-button-tw:before {
-    background-position: -31px 0;
+  &.social-tw:before {
+    background-position: -21px 0;
   }
-  &.social-button-vk:before {
-    background-position: -124px 0;
+  &.social-vk:before {
+    background-position: -84px 0;
   }
-  &.social-button-pi:before {
-    background-position: -155px 0;
+  &.social-gp:before {
+    background-position: -126px 0;
   }
-  &.social-button-gp:before {
-    background-position: -186px 0;
+  &.social-li:before {
+    background-position: -756px 0;
   }
-  &.social-button-lj:before {
-    background-position: -248px 0;
-  }
-  &.social-button-dg:before {
-    background-position: -465px 0;
-  }
-  &.social-button-sb:before {
-    background-position: -496px 0;
-  }
-  &.social-button-li:before {
-    background-position: -1116px 0;
-  }
-
-  i {
-    display: none;
+  &.social-pn:before {
+    background-position: -105px 0;
   }
 }
