--- a/src/apps_common/sitemap/templates/sitemap/index.html
+++ b/src/apps_common/sitemap/templates/sitemap/index.html
@@ -11,7 +11,7 @@
 {% block content %}
 
   <div id="sitemap" class="block grid-block">
-    <div class="title-h1">{{ config.title }}</div>
+    <div class="title-h1">{{ config.header }}</div>
 
     <div class="map text-styles">
       {% include 'sitemap/map.html' %}
