--- a/src/apps_common/google_maps/static/google_maps/scss/balloon.scss
+++ b/src/apps_common/google_maps/static/google_maps/scss/balloon.scss
@@ -5,5 +5,101 @@
   min-width: 40px;
   min-height: 40px;
   z-index: 100;
-  background: #FFFFFF;
+  padding-bottom: 16px;
+  @include border-box;
+
+  .gmap-balloon-content {
+    position: relative;
+    max-width: 100%;
+    z-index: 1;
+    background: $white;
+    @include border-box;
+  }
+
+  .gmap-balloon-arrow {
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    z-index: 10;
+    border: 16px solid transparent;
+    border-top: 16px solid $white;
+    @include transform(translateX(-50%));
+  }
+
+  .gmap-balloon-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    cursor: pointer;
+  }
+}
+
+
+// ====================
+//  THEME
+// ====================
+
+.gmap-balloon {
+  width: 80%;
+  max-width: 350px;
+  padding-bottom: 22px;
+  @include media_interval(0, $media768) {
+    padding-bottom: 16px;
+  }
+
+  .gmap-balloon-arrow {
+    bottom: -9px;
+    @include media_interval(0, $media768) {
+      bottom: -15px;
+    }
+  }
+
+  .gmap-balloon-content {
+    width: 350px;
+    padding: 20px;
+    border: 1px solid #C0C0C0;
+    @include box-shadow(8px 8px 10px rgba(0,0,0,0.15));
+    @include border_radius(10px);
+    @include media_interval(0, $media768) {
+      padding: 14px;
+    }
+  }
+
+  .gmap-balloon-close {
+    top: 8px;
+    right: 8px;
+    width: 18px;
+    height: 18px;
+    @include transform(scale(0.75));
+    @include transition-property(-webkit-transform, transform);
+    @include transition-duration(0.2s);
+    @include transition-timing-function(ease-in);
+    @include media_interval(0, $media768) {
+      display: none;
+    }
+
+    &:before, &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 100%;
+      height: 2px;
+      background: $gray;
+      @include transition-property(background);
+      @include transition-duration(0.2s);
+      @include transition-timing-function(ease-in);
+    }
+    &:before {
+      @include transform(translate3d(0, -50%, 0) rotate(45deg));
+    }
+    &:after {
+      @include transform(translate3d(0, -50%, 0) rotate(-45deg));
+    }
+
+    &:hover {
+      @include transform(scale(1));
+    }
+  }
 }
